# sibela-project

./: CMakeLists.txt  README.md  main.c
components/ui/: dateRange.c  inputBox.c  legend.c  sortControl.c
data/: absensi.c  absensi.h  jadwalMurid.c  jadwalPertemuan.c  jadwalPertemuan.h  mapel.c  murid.c  murid.h  pengajar.c  pengajar.h  ruangan.c  ruangan.h  staf.c
libs/: handleInput.c  handleInput.h  login.c  login.h  utils.c  utils.h  validator.c  validator.h
model/: model.h  window.h  windows.c
types/: dbTypes.h  form.h
update/: update.c
views/: Loading.c  drawView.c  homeView.c  landingView.c  loginView.c
views/home/muridHome/: muridHome.c  muridHome.h
views/home/muridHome/components/jadwal/: read.c  read.h
views/home/muridHome/components/pembayaran/: read.c
views/home/pengajarHome/: pengajarHome.c  pengajarHome.h
views/home/pengajarHome/components/Materi/: read.c  read.h
views/home/pengajarHome/components/absensi/: read.c  read.h
views/home/pengajarHome/components/jadwal/: read.c  read.h
views/home/staffHome/: staffHome.c  staffHome.h
views/home/staffHome/components/jadwal/: create.c  read.c  read.h
views/home/staffHome/components/mapel/: read.c  read.h
views/home/staffHome/components/murid/: create.h  read.c  read.h  update.h
views/home/staffHome/components/pembayaran/: create.c  read.c  read.h
views/home/staffHome/components/pengajar/: read.c  read.h
views/home/staffHome/components/ruangan/: read.c  read.h
views/home/staffHome/components/staff/: create.c  create.h  read.c  read.h  update.c
